--- a/Node_06B/public/css/main.css
+++ b/Node_06B/public/css/main.css
@@ -9,10 +9,11 @@ html {
 }
 body {
   width: 100%;
-  height: 2000px;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
+
 header {
   padding: 2em;
   color: white;
@@ -22,6 +23,7 @@ header {
   background-size: 100% 200%;
   background-attachment: fixed;
 }
+
 nav {
   background-color: blue;
   color: white;
@@ -32,9 +34,9 @@ nav ul {
   display: flex;
 }
 nav li {
-  padding: 5px 16px 5px 3px;
-  /* top right bottom left*/
-  margin: 5px 0 5px 12px;
+  padding: 5px 10px 5px 10px;
+  /* top right botton left */
+  margin: 8px 0px 8px 12px;
   border-left: 3px solid transparent;
   border-right: 3px solid transparent;
   border-radius: 20px;
@@ -44,15 +46,16 @@ nav li {
   transition: 0.5s;
 }
 nav li:hover {
-  border-left: 2px solid #ccc;
+  border-left: 3px solid #ccc;
   border-right: 3px solid #ccc;
-  background-color: rgba(122, 195, 255, 0.6);
+  background-color: rgba(111, 81, 230, 0.6);
 }
 
 nav li:nth-of-type(5) {
   margin-left: auto;
   margin-right: 10px;
 }
+
 footer {
   background-color: #bbb;
   font-size: 8px;
@@ -65,10 +68,46 @@ section.main {
   overflow: auto;
   display: flex;
 }
+
 section.main article {
   flex: 1;
   margin: 5px;
   padding: 5px;
   border: 1px solid #bbb;
   overflow: auto;
+}
+
+table {
+  border-collapse: collapse;
+  width: 95%;
+}
+
+table.student td,
+table.student th {
+  text-align: left;
+  padding: 5px 8px;
+  border-top: 1px solid #bbb;
+  border-bottom: 1px solid #bbb;
+  /*
+  table 의 칼럼에 표현되는 TextContent의 길이가 길어서
+  넘칠경우 말줄임표(...)을 보이도록 하는 설정
+  */
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  table-layout: fixed;
+  cursor: pointer;
+}
+
+input {
+  margin: 5px;
+  padding: 8px;
+  border: 1px solid #bbb;
+  outline: none;
+  border-radius: 5px;
+}
+input:focus {
+  background-color: #ddd;
+}
+input:hover {
+  background-color: #eee;
 }
