--- a/Node_06B/views/student/st_list.ejs
+++ b/Node_06B/views/student/st_list.ejs
@@ -11,15 +11,15 @@
       </tr>
     </thead>
     <tbody>
-      <% students.forEach((st)=>{ %>
+      <% students.forEach( (st)=>{ %>
       <tr>
-        <td><%= st.st_num %></td>
+        <td data-st_num="<%- st.st_num %>"><%= st.st_num %></td>
         <td><%= st.st_name %></td>
         <td><%= st.st_dept %></td>
         <td><%= st.st_grade %></td>
         <td><%= st.st_tel %></td>
       </tr>
-      <%}) %>
+      <% }) %>
     </tbody>
   </table>
 </html>
