--- a/Node_06A/public/css/main.css
+++ b/Node_06A/public/css/main.css
@@ -72,7 +72,17 @@ section.main article {
   border: 1px solid #bbb;
   overflow: auto;
 }
+.dash,
+.student {
+  width: 95%;
+  margin: 10px auto;
+  border: 1px solid #bbb;
+}
+/* studnet 와 input class 가 적용된 article */
 
+article.student.input {
+  text-align: center;
+}
 input {
   margin: 5px;
   padding: 8px;
@@ -85,4 +95,12 @@ input:focus {
 }
 input:hover {
   background-color: #eee;
+}
+article.student.search form {
+  width: 50%;
+  text-align: center;
+}
+
+article.student.search form input {
+  width: 90%;
 }
