--- a/Node_06B/views/student/st_main.ejs
+++ b/Node_06B/views/student/st_main.ejs
@@ -15,8 +15,9 @@
     <% } %>
     <section class="main">
       <article>
-        <% if(body == "list") { %> <%- include ("./st_list.ejs") %> <% } %> <%
-        if(body == "write") { %> <%- include ("./st_write.ejs") %> <% } %>
+        <% if(body == "list") { %> <%- include ("./st_list.ejs") %> <% } %>
+        <%if(body == "write") { %> <%- include ("./st_write.ejs") %> <% } %>
+        <%if(body == "detail") { %> <%- include ("./st_detail.ejs") %> <% } %>
       </article>
     </section>
     <% if(body == "list") { %>
