--- a/Node_06B/views/student/st_write.ejs
+++ b/Node_06B/views/student/st_write.ejs
@@ -2,28 +2,46 @@
   <fieldset>
     <legend>학생정보</legend>
     <div>
-      <label for="st_num">학번</label><input name="st_num" id="st_num" />
+      <label for="st_num">학번</label
+      ><input name="st_num" id="st_num" placeholder="학번" />
     </div>
     <div>
-      <label for="st_name">이름</label><input name="st_name" id="st_name" />
+      <label for="st_name">이름</label
+      ><input name="st_name" id="st_name" placeholder="이름" />
     </div>
     <div>
-      <label for="st_dept">학과</label><input name="st_dept" id="st_dept" />
+      <label for="st_dept">학과</label
+      ><input name="st_dept" id="st_dept" placeholder="학과" />
     </div>
     <div>
       <label for="st_grade">학년</label
-      ><input type="number" name="st_grade" id="st_grade" />
+      ><input type="number" name="st_grade" id="st_grade" placeholder="학년" />
     </div>
     <div>
       <label for="st_tel">전화번호</label>
-      <input type="phone" name="st_tel" id="st_tel" />
+      <input type="phone" name="st_tel" id="st_tel" placeholder="전화번호" />
     </div>
     <div>
-      <label for="st_addr">주소</label><input name="st_addr" id="st_addr" />
+      <label for="st_addr">주소</label
+      ><input name="st_addr" id="st_addr" placeholder="주소" />
     </div>
     <div>
       <label></label>
       <button type="button" class="btn submit">저장</button>
     </div>
   </fieldset>
+  <script>
+    const st_num = `<%-student.st_num %>`;
+    if (st_num) {
+      const numInput = document.querySelector("input[name='st_num']");
+      numInput.setAttribute("readonly", "readonly");
+      //numInput.value = st_num;
+    }
+    const student = JSON.parse(`<%- JSON.stringify(student %>`);
+    const stInput = document.querySelectorAll("input");
+    const stItems = Object.keys(student);
+    for (let i = 0; i < stItems.length; i++) {
+      stInput[i].value = student[`${stItems[i]}`];
+    }
+  </script>
 </form>
