--- a/Node_06B/public/css/student.css
+++ b/Node_06B/public/css/student.css
@@ -17,6 +17,7 @@ article.student.search form {
   width: 50%;
   text-align: center;
 }
+
 article.student.search form input {
   width: 90%;
 }
@@ -38,14 +39,10 @@ article.student.search form input {
   color: white;
   text-decoration: none;
 }
+
 article.student.detail {
   width: 80%;
   margin: 10px auto;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 div.student.item {
@@ -70,7 +67,7 @@ div.student.item div:nth-of-type(1) {
 
 div.student.item div:nth-of-type(2) {
   width: 60%;
-  text-align: right;
+  text-align: left;
 }
 
 div.student.btn-box {
@@ -89,6 +86,7 @@ div.student button.st_update {
   background-color: blue;
   color: white;
 }
+
 div.student button.st_delete {
   background-color: orange;
   color: white;
