--- a/Node_06B/views/student/st_list.ejs
+++ b/Node_06B/views/student/st_list.ejs
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <table class="student list">
-    <thead>
-      <tr>
-        <th>학번</th>
-        <th>이름</th>
-        <th>학과</th>
-        <th>학년</th>
-        <th>전화번호</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% students.forEach( (st)=>{ %>
+<table class="student list">
+  <thead>
+    <tr>
+      <th>학번</th>
+      <th>이름</th>
+      <th>학과</th>
+      <th>학년</th>
+      <th>전화번호</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% students.forEach( (st)=>{ %>
       <tr data-st_num="<%- st.st_num %>">
-        <td><%= st.st_num %></td>
-        <td><%= st.st_name %></td>
-        <td><%= st.st_dept %></td>
-        <td><%= st.st_grade %></td>
-        <td><%= st.st_tel %></td>
+        <td>
+          <%= st.st_num %>
+        </td>
+        <td>
+          <%= st.st_name %>
+        </td>
+        <td>
+          <%= st.st_dept %>
+        </td>
+        <td>
+          <%= st.st_grade %>
+        </td>
+        <td>
+          <%= st.st_tel %>
+        </td>
       </tr>
       <% }) %>
-    </tbody>
-  </table>
+  </tbody>
+</table>
+
 </html>
