--- a/Node_06B/views/student/st_main.ejs
+++ b/Node_06B/views/student/st_main.ejs
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <%- include ("../includes/head.ejs") %>
+
+<head>
+  <%- include ("../includes/head.ejs") %>
     <link rel="stylesheet" href="/css/student.css" />
     <script src="/js/st_list.js"></script>
-  </head>
-  <body>
-    <%- include ("../includes/header.ejs") %> <% if(body == "list") { %>
-    <article class="student search">
-      <form>
-        <input name="st_name" placeholder="학생이름을 입력후 Enter" />
-      </form>
-    </article>
-    <% } %>
-    <section class="main">
-      <article>
-        <% if(body == "list") { %> <%- include ("./st_list.ejs") %> <% } %>
-        <%if(body == "write") { %> <%- include ("./st_write.ejs") %> <% } %>
-        <%if(body == "detail") { %> <%- include ("./st_detail.ejs") %> <% } %>
+</head>
+
+<body>
+  <%- include ("../includes/header.ejs") %>
+    <% if(body=="list" ) { %>
+      <article class="student search">
+        <form>
+          <input name="st_name" placeholder="학생이름을 입력후 Enter" />
+        </form>
       </article>
-    </section>
-    <% if(body == "list") { %>
-    <article class="student insert">
-      <a href="/student/insert">학생 정보 추가</a>
-    </article>
-    <% } %> <%- include ("../includes/footer.ejs") %>
-  </body>
+      <% } %>
+        <section class="main">
+          <article>
+            <% if(body=="list" ) { %>
+              <%- include ("./st_list.ejs") %>
+                <% } %>
+                  <% if(body=="write" ) { %>
+                    <%- include ("./st_write.ejs") %>
+                      <% } %>
+                        <% if(body=="detail" ) { %>
+                          <%- include ("./st_detail.ejs") %>
+                            <% } %>
+          </article>
+        </section>
+        <% if(body=="list" ) { %>
+          <article class="student insert">
+            <a href="/student/insert">학생 정보 추가</a>
+          </article>
+          <% } %>
+            <%- include ("../includes/footer.ejs") %>
+</body>
+
 </html>
