--- a/Node_FoodV2/public/css/input.css
+++ b/Node_FoodV2/public/css/input.css
@@ -1,3 +1,20 @@
+table.today {
+  width: 80%;
+  border-collapse: collapse;
+  margin: 20px auto;
+}
+td,
+th {
+  text-align: left;
+  border-bottom: 1px solid #bbb;
+  border-top: 1px solid #bbb;
+  padding: 12px 16px;
+  white-space: nowrap;
+}
+td {
+  cursor: pointer;
+}
+
 table.today input {
   width: 60%;
   padding: 5px;
@@ -10,8 +27,14 @@ button.today {
   outline: none;
   border-radius: 5px;
   padding: 12px 16px;
-  cursor: pointer;
+  margin: 5px;
 }
+
+button.today.reset {
+  background-color: orange;
+  color: black;
+}
+
 button.today:hover {
   background-color: white;
   color: black;
