--- a/JS_ERP/views/add.pug
+++ b/JS_ERP/views/add.pug
@@ -1,21 +1,29 @@
 extends layout
 
+
 block content
 
-    form(method="POST").buyer
-        input(name="t_seq", value="0")
-        tr 
-            td
-                input(name="c_num"  placeholder="거래처 ID를 입력하세요" title="거래처ID")
-            td
-                input(name="c_name"  placeholder="거래처이름을 입력하세요" title="거래처명")
-            td
-                input(name="c_tel" placeholder="연락처를 입력하세요" title="전화번호")
-            td
-                input(name="c_name2" placeholder="담당자명을 입력하세요" title="담당자명")
-            td
-                input(name="c_tel2" placeholder="주소를 입력하세요" title="주소")
-            td
-                button(type="button").buyer.add 저장  
-                button(type="button").buyer.reset 새로작성
-                button(type="button").buyer.list 리스트로 
+  link(rel='stylesheet', href='/css/buyer.css')
+  script(src="/js/add.js")
+
+  section.main
+    form(method="POST" onsubmit="return false").edit
+      div
+        label(for="c_num") 거래처ID
+        input(name="c_num" id="c_num" placeholder="거래처 ID를 입력하세요" type="text" maxlength="4" value= buyers.b_num)
+      div
+        label(for="c_name") 거래처명
+        input(name="c_name" id="c_name" placeholder="거래처 이름을 입력하세요" type="text" maxlength="10" value= buyers.b_name)
+      div
+        label(for="c_tel") 전화번호
+        input(name="c_tel" id="c_tel" placeholder="연락처를 입력하세요" type="text" maxlength="12" value= buyers.b_tel)
+      div
+        label(for="c_name2") 담당자명
+        input(name="c_name2" id="c_name2" placeholder="담당자명을 입력하세요" type="text" maxlength="10" value= buyers.b_mname)
+      div
+        label(for="c_addr") 주 소
+        input(name="c_addr" id="c_addr" placeholder="주소를 입력하세요" type="text" maxlength="125" value= buyers.b_addr)
+      div.btn_box
+        button.buyer_save 저장
+        button(type="reset").buyer_reset 새로작성
+        button.buyer_list 리스트로
