--- a/Node_ERP/public/css/buyer/write.css
+++ b/Node_ERP/public/css/buyer/write.css
@@ -96,6 +96,11 @@ button.buyer.reset {
   color: white;
 }
 
-form.buyer.write input[name="b_code"] {
-  width: 50%;
+/* button 속성 중에 disabled='disable' 가 설정되었을 때
+*/
+button[disabled] {
+  border: 1px solid #999 !important;
+  background-color: #ccc !important;
+  color: #777 !important;
+  cursor: not-allowed;
 }
