--- a/Node_ERP/public/css/buyer/list.css
+++ b/Node_ERP/public/css/buyer/list.css
@@ -20,16 +20,18 @@ table.buyer th {
   background-color: rgb(0, 183, 255);
 }
 
+table.buyer td {
+  cursor: pointer;
+}
+
 div.button.box {
   padding: 12px 0;
   text-align: right;
 }
 
 button.insert {
-  border: none;
-  outline: none;
-  border-radius: 5px;
   background-color: rgb(2, 19, 77);
   color: white;
   padding: 12px 16px;
+  cursor: pointer;
 }
