--- a/Node_ERP/public/css/main.css
+++ b/Node_ERP/public/css/main.css
@@ -49,6 +49,10 @@ nav.main li {
   transition: 0.5s;
 }
 
+nav.main li:nth-of-type(6) {
+  margin-left: auto;
+}
+
 nav.main li:hover {
   border-bottom: 3px solid rgb(0, 212, 255);
 }
@@ -64,9 +68,6 @@ footer {
   text-align: center;
 }
 
-button:hover {
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.7);
-}
 /* mouse hove*/
 input:hover {
   background-color: #eee;
@@ -74,4 +75,14 @@ input:hover {
 /* mouse click, focus */
 input:focus {
   background-color: #ddd;
+}
+
+button {
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+button:hover {
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
