--- a/Node_ERP_V2/views/product/write.pug
+++ b/Node_ERP_V2/views/product/write.pug
@@ -31,16 +31,16 @@ block content
                 input(name="p_industry", value=product.p_industry, placeholder="제조사를 입력하세요",title="제조사")
             div 
                 label 주요매입처
-                input(name="p_buyer", value=product.p_buyer, placeholder="제조사를 입력하세요",title="제조사")
+                input(name="p_buyer", value=product.p_buyer, placeholder="주요매입처를 입력하세요",title="주요매입처")
             div 
                 label 매입단가
-                input(name="p_iprice", value=product.p_iprice, placeholder="제조사를 입력하세요",title="제조사")
+                input(name="p_iprice", value=product.p_iprice, placeholder="매입단가를 입력하세요",title="매입단가")
             div 
                 label 과세여부
-                input(name="p_tax", value=product.p_tax, placeholder="제조사를 입력하세요",title="제조사")
+                input(name="p_tax", value=product.p_tax, placeholder="과세여부를 입력하세요",title="과세여부")
             div 
                 label 판매단가
-                input(name="p_oprice", value=product.p_oprice, placeholder="제조사를 입력하세요",title="제조사")
+                input(name="p_oprice", value=product.p_oprice, placeholder="판매단가를 입력하세요",title="판매단가")
                             
             div.button.box     
                 button(type="button").product.input 저장
