--- a/Tiget/views/layout.pug
+++ b/Tiget/views/layout.pug
@@ -1,8 +1,10 @@
 doctype html
 html
   head
+  
     title= title
-    link(rel='stylesheet', href='/css/style.css')
+    link(rel='stylesheet', href='/css/styles.css')
     script(src="/js/main.js")
   body
     block content
+
