--- a/Tiget/views/layout.pug
+++ b/Tiget/views/layout.pug
@@ -1,10 +1,11 @@
 doctype html
 html
   head
-  
-    title= title
+
     link(rel='stylesheet', href='/css/styles.css')
-    script(src="/js/main.js")
+    script(src="https://cdn.tailwindcss.com")
+    title= title
   body
-    block content
+    h1.text-red-500 안녕하세요
+block content
 
