--- a/Tiget/public/css/styles.css
+++ b/Tiget/public/css/styles.css
@@ -1,3 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'segoe UI';
+    font-weight: 400 ;
+    background-color: #ededed;
+}
