--- a/Tiget/public/css/styles.css
+++ b/Tiget/public/css/styles.css
@@ -8,20 +8,51 @@ body {
     font-family: 'segoe UI';
     font-weight: 400 ;
     background-color: #ededed;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: auto;
+    padding-top: 40px;
+    width: 100vw;
 }
 
 .footer {
     padding: 40px 0 ;
     background-color: #fff;
 }
+
+.introduction {
+   background-color: #ddd;
+text-align: center;
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 900px;
+padding: 50px;
+border: 30px;
+border-radius: 5px;
+padding-bottom: 130px;
+margin-bottom: 40px;
+}
+
+h3{
+    text-align: left;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 30px;
+}
+
+
 .footer .social {
     text-align: center;
+    padding-top: 25px;
     padding-bottom:25px ;
-    color: #4b4c4d;
+    color: black;
 }
 
 .footer .social a{
-    font-size: 24px;
+    font-size: 30px;
     color: inherit;
 border: 1px solid #ccc;
 width: 40px;
@@ -43,9 +74,10 @@ opacity: 0.75;
     margin-top: 0;
     padding: 0;
     list-style: none;
-    font-size: 18px;
+    font-size: 23px;
     line-height: 1.6;
     margin-bottom: 0;
+    text-align: center;
    
 }
 .footer ul a {
@@ -57,4 +89,22 @@ opacity: 0.75;
     display: inline-block;
     padding: 0 15px;
 
+}
+
+.footer ul li a:hover {
+    opacity: 1;
+}
+
+.footer .copyright {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 17px;
+    color: black;
+}
+
+.email {
+    margin-top:  20px;
+    text-align: center;
+    font-size: 17px;
+    color: black;
 }
