--- a/Tiget/views/index.pug
+++ b/Tiget/views/index.pug
@@ -1,29 +1,34 @@
 extends layout
-//- html
-//-   head
-//-     link(href='./css/styles.css', rel='stylesheet')
-//-     script(src="https://cdn.tailwindcss.com")
-//-     title My app
-//-   body 
-//-     h1.text-2xl  Tiget  
-//-     p.mt12  소개글
-//-     div.text-red-500 소개2 
-//-     div 티겟
-//-     input(name="username",placeholder="USERNAME",title="사용자 ID")
-//-     input(name="password", type="password", placeholder="PASSWORD",title="비밀번호")
-//-     button(type="button").user.login 로그인
-block content
+//- head
+//-   link(rel="stylesheet", href="css/stylev2.css")
+//-   link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css' integrity='sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==' crossorigin='anonymous' referrerpolicy='no-referrer')
+//-   title footer
+//-   footer
+//-     .footer-content
+//-       h3 Tiget
+//-       p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora illum neque reiciendis, minima beatae alias natus. Maxime provident veniam velit natus eos, magnam et alias. Veniam tempore exercitationem ratione. Quis!
+//-       ul.socials
+//-         li
+//-           a(href='#')
+//-           i.fab.fa-instagram
+//-         li
+//-           a(href='#')
+//-           i.fab.fa-twitter
+//-         li
+//-           a(href='#')
+//-           i.fab.fa-facebook
+//-       .footer-menu
+//-         ul.f-menu
+//-           li
+//-             a(href='#') 공연정보
+//-           li
+//-             a(href='#') 커뮤니티
+//-           li
+//-             a(href='#') 연극
+//-           li
+//-             a(href='#') Privacy Policy
+//-     .footer-bottom
+//-         p.email email : --@tiget.com 
+//-         p.copyright Copyright &copy; Tiget All Rights Reserved.
 
-//- .w-full.bg-grey-lighter.h-screen.flex.flex-col.justify-center
-//-   form.w-64.mx-auto.bg-white.shadow-md.rounded.p-8.mb-4
-//-     .mb-4
-//-       label(for='username').block.text-grey-darkest.font-bold.mb-2 Username
-//-       input(type='text', placeholder='Username').shadow.border.rounded.w-full.p-2.text-xs.text-grey-darker
-//-     .mb-4
-//-       label(for='password').block.text-grey-darkest.font-bold.mb-2 Password 
-//-       input(type='password', placeholder='***********').shadow.border.rounded.w-full.p-2.text-xs.text-grey-darker.mb-3
-//-       p.text-red-light.text-xs Choose a password
-//-     .flex.items-center.justify-between
-//-       button(type='submit').bg-blue.text-xs.text-white.font-bold.py-2.px-4.rounded Sign in
-//-       a(href='#').inline-block.font-bold.text-xs.text-blue.no-underline Forgot password?
-//-   p.text-grey.text-xs.text-center ©2022 All rights reserved.
+block content
