--- a/Node_BBS_V2/views/layout.pug
+++ b/Node_BBS_V2/views/layout.pug
@@ -3,7 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/css/style.css')
-    script(src="https://cdn.tailwindcss.com")
+    script(src="/js/main.js")
   body
-    h1.text-red-500.font-bold 안녕하세요
     block content
