--- a/Node_BBS_V2/views/index.pug
+++ b/Node_BBS_V2/views/index.pug
@@ -9,7 +9,7 @@ block content
         th 작성시각
         th 작성자ID
         th 제목
-        th   
+        th ... 
     tbody 
       each bbs in bbsList
         tr(data-id=`${bbs._id}`)
@@ -18,5 +18,11 @@ block content
           td= bbs.b_writer
           td= bbs.b_subject 
           td
-  .bbs.button.box 
+        each cmm in bbs.b_comments 
+          tr
+            td 
+            td re&gt;
+            td= cmm.ct_writer
+            td `#{cmm.ct_comment}'
+  div.bbs.button.box 
     button.bbs.insert 추가
