--- a/Node_BBS_V2/views/detail.pug
+++ b/Node_BBS_V2/views/detail.pug
@@ -1,30 +1,33 @@
 extends layout 
-block content 
+block content
     script.
-        // pug 변수 bbs_id 데이터를
-        // JS 에서 사용할 수 있도록 id 변수에 할당하기 
+        // pug 변수 bbs._id 데이터를
+        // JS 에서 사용할수 있도록 id 변수에 할당하기
         const id = `#{bbs._id}`
-    script(src="/js/detail.js") 
-    link(rel="stylesheet", href="/css/detail.css")
-    article.bbs.detail 
+    script(src="/js/detail.js")
+    link(rel="stylesheet",href="/css/detail.css")
+    article.bbs.detail
         div.label 작성일자
         div.data= bbs.b_date 
         div.label 작성시각
-        div.data= bbs.b_time
+        div.data= bbs.b_time 
         div.label 작성자
         div.data= bbs.b_writer
         div.label 제목
-        div.data= bbs.b_subject
+        div.data= bbs.b_subject 
         div.label 내용
-        div.data= bbs.b_content 
-    div.bbs.detail.button.box 
+        div.data= bbs.b_content
+    div.bbs.detail.button.box
         button.bbs.update 수정
         button.bbs.delete 삭제
         button.bbs.list 리스트로
-    div.bbs.comments
-        div.comments.item
-            each comment in bbs.b_comments
-                p= `${comment.ct_writer}..${comment.ct_comment}`
-        div.comments.input
-            input()#b_comment
-            button.comment.add 댓글추가 
+    article.bbs.comments
+        input.comment
+        button.comment 댓글추가        
+        div.comments.box
+            each comm in bbs.b_comments
+                p.comment.list.box
+                    span.comment.writer= `${comm.ct_writer || 익명}`
+                    span.comment.content= comm.ct_comment
+                    //- 댓글의 id 를 dataset 로 설정
+                    span.comment.delete(data-id=`${comm._id}`) &times;
